muleplapeli/src/main/resources/api/examples/errors/501.raml
#%RAML 1.0 NamedExample

meta:
  status: failed
  messages:
    - 
      code: "NOT_IMPLEMENTED"
      level: error
      description: "The server either does not recognize the request method, or it lacks the ability to fulfill the request."